# shoes

./: CONFIG.md  Cargo.toml
src/: address.rs  async_stream.rs  buf_reader.rs  client_proxy_selector.rs  copy_bidirectional.rs  copy_bidirectional_message.rs  copy_multidirectional_message.rs  http_handler.rs  hysteria2_server.rs  lib.rs  main.rs  noop_stream.rs  option_util.rs  port_forward_handler.rs  quic_server.rs  quic_stream.rs  resolver.rs  rustls_util.rs  salt_checker.rs  socket_util.rs  socks_handler.rs  stream_reader.rs  thread_util.rs  timed_salt_checker.rs  tls_handler.rs  trojan_handler.rs  tuic_server.rs  udp_message_stream.rs  udp_multi_message_stream.rs  util.rs  vless_handler.rs  vless_message_stream.rs
src/config/: mod.rs  types.rs
src/shadow_tls/: mod.rs  shadow_tls_client_handler.rs  shadow_tls_hmac.rs  shadow_tls_server_handler.rs  shadow_tls_stream.rs
src/shadowsocks/: aead_util.rs  blake3_key.rs  default_key.rs  mod.rs  shadowsocks_cipher.rs  shadowsocks_key.rs  shadowsocks_stream.rs  shadowsocks_stream_type.rs  shadowsocks_tcp_handler.rs
src/snell/: mod.rs  snell_handler.rs  snell_udp_stream.rs
src/tcp/: mod.rs  tcp_client_connector.rs  tcp_handler.rs  tcp_handler_util.rs  tcp_server.rs
src/vmess/: crc32.rs  fnv1a.rs  md5.rs  mod.rs  nonce.rs  sha2.rs  typed.rs  vmess_handler.rs  vmess_stream.rs
src/websocket/: mod.rs  websocket_handler.rs  websocket_stream.rs
