[package]
name = "shoes"
version = "0.1.8"
edition = "2024"
license = "MIT"
rust-version = "1.89.0"
description = "A multi-protocol proxy server."
homepage = "https://github.com/cfal/shoes/"
repository = "https://github.com/cfal/shoes/"
readme = "README.md"
keywords = ["proxy", "proxy-server", "shadowsocks", "v2ray", "vmess"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
# [x] Asynchronous runtime
async-trait = { version = "^0.1" }
tokio = { version = "^1.47", features = [
    "fs",
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "sync",
    "time",
] }
tokio-rustls = { version = "^0.26", default-features = false, features = [
    "logging",
    "tls12",
    "aws-lc-rs",
] }
futures = { version = "^0.3" }

# [x] Hashing
blake3 = { version = "^1.8" }
argon2 = { version = "^0.5" }
hmac = { version = "^0.12" }
digest = { version = "^0.10" }
md-5 = { version = "^0.10" }
sha3 = { version = "^0.10" }
rustc-hash = { version = "^2.1" }

# [x] Cryptography
aes = { version = "^0.8" }
cfb-mode = { version = "^0.8" }


# [x] Security
rustls = { version = "0.23" }
webpki-roots = { version = "^1.0" }

# [x] Quinn QUIC Protocol HTTP/1, HTTP/2, HTTP/3
quinn = { version = "^0.11", default-features = false, features = [
    "log",
    "platform-verifier",
    "runtime-tokio",
    "rustls-aws-lc-rs",
] }
http = { version = "^1.3" }
h3 = "0.0.8"
h3-quinn = "0.0.10"
socket2 = { version = "^0.6" }

# [x] Serialization
serde = { version = "*", features = ["derive", "std"] }
serde_yaml = "0.9.34-deprecated"

# [x] Utilities
aws-lc-rs = { version = "^1.13", default-features = false }
base64 = { version = "^0.22" }
bytes = { version = "^1.10" }
dashmap = { version = "^6.1" }
rand = { version = "^0.9" }
percent-encoding = { version = "^2.3" }
memchr = { version = "^2.7" }
notify = { version = "^8.2" }
parking_lot = { version = "^0.12" }

# [x] Logging
env_logger = { version = "^0.11" }
log = { version = "^0.4" }


[dev-dependencies]
tempfile = { version = "^3.21" }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[profile.release]
opt-level = 3
lto = "fat"
strip = true
